Connected to Oracle. removed orderid, created orderseq changed sequuence to hibernate_sequence3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,17 +19,19 @@ spring.jpa.database=H2
 #spring.datasource.username=sa
 #spring.datasource.password=
 
-spring.h2.console.enabled=true
-spring.h2.console.settings.trace=true
-spring.h2.console.settings.web-allow-others=true
-spring.h2.console.path=/h2
+#spring.h2.console.enabled=true
+#spring.h2.console.settings.trace=true
+#spring.h2.console.settings.web-allow-others=true
+#spring.h2.console.path=/h2
 
 #Oracle configuration
 #spring.datasource.url=jdbc:oracle:thin:@ORA_SERVER_IP:ORA_SERVER_PORT:ORA_SID
-#spring.datasource.username=ORACLE_USER
-#spring.datasource.password=ORACLE_PASSWORD
-#spring.datasource.dataSourceClassName=oracle.jdbc.pool.OracleDataSource
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+spring.datasource.url=jdbc:oracle:thin:@y44tst00.isd.upmc.edu:1521:DONTEST
+
+spring.datasource.username=DONATION
+spring.datasource.password=G3ner0us
+spring.datasource.dataSourceClassName=oracle.jdbc.pool.OracleDataSource
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 
 spring.jpa.show-sql = true
 
