google code refactored, changed all entity column type and proper alignment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ logging.level.org.hibernate.SQL=WARN
 
 
 #Comment ta below line to disable H2
-spring.jpa.database=H2
+#spring.jpa.database=H2
 #spring.datasource.url=jdbc:h2:mem:testdb;MODE=Oracle;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 #spring.datasource.username=sa
 #spring.datasource.password=
@@ -23,6 +23,15 @@ spring.jpa.database=H2
 #spring.h2.console.settings.trace=true
 #spring.h2.console.settings.web-allow-others=true
 #spring.h2.console.path=/h2
+
+#Postgres configuration
+#spring.datasource.url=jdbc:postgresql://localhost:5432/donor
+
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+#spring.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+
 
 #Oracle configuration
 #spring.datasource.url=jdbc:oracle:thin:@ORA_SERVER_IP:ORA_SERVER_PORT:ORA_SID
@@ -33,7 +42,10 @@ spring.datasource.password=G3ner0us
 spring.datasource.dataSourceClassName=oracle.jdbc.pool.OracleDataSource
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 
+
 spring.jpa.show-sql = true
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 liquibase.change-log=classpath:liquibase/changesets.xml
 
