Committed what i have with few changes from when it was updated last time.

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.upmc</groupId>
     <artifactId>donation-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <name>donation-api</name>
     <description>Demo project for Spring Boot</description>
