--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=8081
 server.contextPath=/donation-api
 
 # Log configuration (the below config can't be changed from cloud config)
@@ -38,7 +38,8 @@ logging.level.org.hibernate.SQL=WARN
 spring.datasource.url=jdbc:oracle:thin:@y44tst00.isd.upmc.edu:1521:DONTEST
 
 spring.datasource.username=DONATION
-spring.datasource.password=G3ner0us
+spring.datasource.password=D0nat10n
+#spring.datasource.password=G3ner0us
 spring.datasource.dataSourceClassName=oracle.jdbc.pool.OracleDataSource
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 
