email complete end 2 end working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 server.port=8081
 server.contextPath=/donation-api
+spring.profiles.active=production
 
 # Log configuration (the below config can't be changed from cloud config)
 logging.file=./logs/donation-api.log
 # Log level (can be changed in cloud config)
 logging.level=INFO
-logging.level.com.donation=INFO
+logging.level.com.donation=DEBUG
 logging.file.maxHistory=5
 logging.file.maxFileSize=20MB
 logging.file.totalSizeCap=50MB
@@ -54,3 +55,13 @@ liquibase.change-log=classpath:liquibase/changesets.xml
 #orderId when there is no record present in the database.
 #Don't mention the first digit(very left digit) as zero
 transaction.initialOrderId=200009
+
+spring.mail.host=smtprelay.upmc.edu
+spring.mail.port=25
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.enable = false
+spring.mail.test-connection=true
