--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8081
-server.contextPath=/donation-api
+#server.contextPath=/donation-api
+server.contextPath=/
+
 spring.profiles.active=production
 
 # Log configuration (the below config can't be changed from cloud config)
@@ -39,7 +41,8 @@ logging.level.org.hibernate.SQL=WARN
 spring.datasource.url=jdbc:oracle:thin:@y44tst00.isd.upmc.edu:1521:DONTEST
 
 spring.datasource.username=DONATION
-spring.datasource.password=D0nat10n
+spring.datasource.password=D8n1t18n
+#spring.datasource.password=D0nat10n
 #spring.datasource.password=G3ner0us
 spring.datasource.dataSourceClassName=oracle.jdbc.pool.OracleDataSource
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
@@ -60,8 +63,8 @@ spring.mail.host=smtprelay.upmc.edu
 spring.mail.port=25
 spring.mail.username=
 spring.mail.password=
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
+spring.mail.properties.mail.smtp.starttls.required=false
 spring.mail.properties.mail.smtp.ssl.enable = false
 spring.mail.test-connection=true
